SERVER-10138 Assertion failure when trying to auth on replset connection before user is replicated